2017-10-19  Bruno Haible  <bruno@clisp.org>

	Fix build failure with DEBUG_GCSAFETY (regression from 2017-10-14).
	* makemake.in (gen.lispbibl.c): Replace 'print' statements with fprint
	statements.

2017-10-18  Bruno Haible  <bruno@clisp.org>

	Fix compilation failure with DEBUG_SPVW & SPVW_PURE & GENERATIONAL_GC.
	* spvw_global.d (mem): Remove heapnr_from_type field.
	(HAVE_HEAPNR_FROM_TYPE): Remove macro.
	(init_mem_heapnr_from_type): Remove function.
	(typecode_to_heapnr): New macro.
	* spvw_global_old.d: Likewise.
	* spvw_garcol.d (update): Use typecode_to_heapnr instead of
	mem.heapnr_from_type array.
	* spvw_garcol_old.d: Likewise.
	* spvw_genera1.d (rebuild_old_generation_cache, gc_check_at): Likewise.
	* spvw_genera1_old.d: Likewise.
	* spvw.d (init_memory): Update.

2017-10-18  Bruno Haible  <bruno@clisp.org>

	Fix build failure with cc on IRIX.
	* foreign.d (do_av_start): Access the 'flags' field only on Windows.

2017-10-18  Bruno Haible  <bruno@clisp.org>

	Fix build failure with pre-C99 compilers (regression from 2008-10-29).
	* spvw_allocate.d (allocate): Use braces at variable declarations after
	statements.

2017-10-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure on Linux/arm64 with CC="arm-linux-gnueabihf-gcc-4.8".
	* lispbibl.d (C_CODE_ALIGNMENT) [ARM]: Set to 1.

2017-10-16  Bruno Haible  <bruno@clisp.org>

	Avoid a crash of the highest bit number test on Linux/arm.
	* m4/mmap.m4 (CL_MMAP): On arm systems, test address 0x41000000 instead
	of address 0x40000000.
	* aclocal.m4, src/configure: Regenerated.

2017-10-16  Bruno Haible  <bruno@clisp.org>

	Avoid another risky optimization when --enable-portability is enabled.
	* lispbibl.d: When NO_SYMBOLFLAGS is defined, don't use symbolflags.
	* makemake.in (XCFLAGS): Add -DNO_SYMBOLFLAGS if --enable-portability
	is specified.

2017-10-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure on Linux/s390x.
	* makemake.in: When compiling lisparit.c with GCC for s390x, reduce
	optimizations.
